fix: item sheet layout, especially with description tab with long descriptions
Notably fixes spell sheet description tab having multiple scrollbars.

--- a/less/items.less
+++ b/less/items.less
@@ -40,6 +40,11 @@
     .tab {
       padding: 0 5px;
       // overflow: hidden;
+
+      &.active {
+        display: flex;
+        flex-flow: column;
+      }
     }
 
     .item-properties {
